add API docs for gateway